fixed blob going outside of left side on mobile view

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -44,7 +44,7 @@ $debugging: false;
   position: relative;
   height: 1000px;
   overflow: hidden;
-  
+  left: 20px;
   .blob-svg {
     @include testBorder;
     position: absolute;
