--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -1,5 +1,13 @@
 // this section is missing right position on menu-link from the top
 // .sidenav-text is not finished etc. 
+#menu{
+  z-index: 2;
+}
+
+#menu-icon {
+  @include testBorder;
+}
+
 .sidenav {
   height: 100%;
   width: 0;
